revert: fix overflow

--- a/styles.css
+++ b/styles.css
@@ -107,7 +107,6 @@ blockquote {
   list-style: none;
   display: flex;
   gap: 3em;
-  overflow-y: scroll;
 }
 
 .info-list-item {
